# ScytheEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  MULTI_API_ANALYSIS.md  MULTI_API_ANALYSIS_update1.md
assets/shaders/: basic.frag  basic.vert  red.frag
src/: Camera.cpp  Camera.h  GameObject.cpp  GameObject.h  Main.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Window.cpp  Window.h
src/Scythe/Core/: Buffer.cpp  Buffer.h  GraphicsContext.cpp  GraphicsContext.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexArray.h
src/Scythe/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
